# sp1-age-zkpf

./: .gitignore  README.md
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
