[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"

[dependencies]
image = "0.25.1"
serde_json = "1.0.117"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet"  }
